<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appName "Tap A Lap">
    <!ENTITY author "Matt Henricks">
    ]>

<resources>
    <string name="app_name">&appName;</string>

    <!--Main page-->
    <string name="initial_lap_text">0</string>
    <string name="completed_text">Completed</string>
    <string name="laps_text">Laps</string>
    <string name="decrease_button_text">-</string>
    <string name="reset_button_text">Reset</string>

    <!--Options menu-->
    <string name="settings_option">Settings</string>
    <string name="help_option">Help</string>

    <!--Help dialog popup-->
    <string name="help_dialog_title">How to use &appName;:</string>
    <string name="help_dialog_message">
        \nSimply tap the screen to count laps!
        \n
        \nAlso, you can:
        \n\t- Subtract laps with <b>\u2014</b>.
        \n\t- Reset your count with <b>Reset</b>.
        \n\t- Swipe right to access the <b>Stats</b> page.
        \n
        \nHappy lapping!\n
    </string>

    <!-- Session page -->
    <string name="session_start_text">Start Session</string>
    <string name="session_pause_text">Pause Session</string>
    <string name="session_stop_text">Stop Session</string>

    <string name="session_welcome_text">Current Session</string>

    <string name="laps_per_mile_required_toast">Specify laps/mile in Settings to begin a Session for counting</string>

    <string name="session_started_toast">Session started!</string>
    <string name="session_start_required_toast">Must start Session first!</string>
    <string name="session_already_started_toast">Session already started! Stop current session to start new one</string>
    <string name="session_resumed_toast">Session resumed!</string>

    <string name="session_ended_toast">Session ended!</string>
    <string name="session_already_ended_toast">Session already ended!</string>
    <string name="session_must_start_before_ending_toast">Must start Session before you can end one!</string>

    <!--Settings page-->
    <string name="laps_per_mile_rate_title">Set laps per mile</string>
    <string name="laps_per_mile_rate_summary">Specify how many laps are required to run 1 mile</string>
    <string name="laps_per_mile_rate_hint">Laps per mile</string>
    <string name="screen_always_on_title">Screen always on</string>
    <string name="screen_always_on_summary">Leave the screen on while counting laps</string>

    <!--Stats action required page-->
    <string name="input_laps_per_mile_landing">Specify laps/mile to see Stats</string>
    <string name="input_laps_per_mile_button">Input laps/mile</string>

    <!-- Stats page -->
    <string name="placefiller_text">HERE IS SOME TEXT WOOO</string>
</resources>
