<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cocolocomoco.tapalap.LapCountActivity">

    <TextView
        android:id="@+id/lapsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/laps_text"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lapCountDisplay"/>

    <TextView
        android:id="@+id/lapCountDisplay"
        android:layout_width="149dp"
        android:layout_height="167dp"
        android:text="@string/initial_lap_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display4"
        android:textColor="@android:color/black"
        android:textSize="140sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"/>

    <TextView
        android:id="@+id/completedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/completed_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lapCountDisplay"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/decreaseButton"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/decrease_button_text"
        android:onClick="onDecreaseClick"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lapsText"
        app:layout_constraintVertical_bias="0.99"/>

    <Button
        android:id="@+id/resetButton"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/reset_button_text"
        android:onClick="onResetClick"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lapsText"
        app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>
