<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cocolocomoco.tapalap.ui.lapcount.LapCountFragment">

    <TextView
        android:id="@+id/lapsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/laps_text"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lapCountDisplay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/lapCountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_lap_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display4"
        android:textColor="@android:color/black"
        android:textSize="140sp"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/completedText"/>

    <TextView
        android:id="@+id/completedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/completed_text"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.098"/>

    <Button
        android:id="@+id/decreaseButton"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/decrease_button_text"
        android:onClick="onDecreaseClick"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lapCountDisplay"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/resetButton"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/reset_button_text"
        android:onClick="onResetClick"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lapCountDisplay"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/debugBox"
        android:layout_width="397dp"
        android:layout_height="603dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="10dp"
        tools:layout_editor_absoluteX="14dp"/>


</android.support.constraint.ConstraintLayout>
